name:                xmonad-config
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/xmonad-config#readme
license:             BSD3
license-file:        LICENSE 
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable xmonadctl
  hs-source-dirs:      .
  main-is:             xmonadctl.hs
  ghc-options:         -O2 -Wunused-imports
  default-language:    Haskell2010
  build-depends:         base >= 4.7
                       , X11

executable mybar
  hs-source-dirs:      .
  main-is:             MyBar.hs
  ghc-options:         -O2 -Wunused-imports
  default-language:    Haskell2010
  build-depends:         base >= 4.7
                       , X11
                       , xmobar

executable xmonad
  hs-source-dirs:      ., src
  main-is:             xmonad.hs
  ghc-options:         -O2 -Wunused-imports "-with-rtsopts=-p"
  default-language:    Haskell2010
  other-modules:       Spacing, Grab, Modal, XMonad.Layout.ResizableTileSub
  build-depends:         base >= 4.7
                       , containers
                       , xmonad
                       , xmonad-contrib >= 0.14
                       , X11
                       , filepath
                       , directory
                       , deepseq
                       , extra
                       , xmobar
                       , stm
